--- a/app/src/main/res/layout/activity_job_view.xml
+++ b/app/src/main/res/layout/activity_job_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background_color"
     android:fillViewport="true"
-    tools:context=".home.JobViewActivity">
+    tools:context=".home.activity.JobViewActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
