JobSpot - Bug fixes file names changed from quiz to mock test and UI changes related to mock_test_rule_layout.xml

--- a/app/src/main/res/layout/fragment_mock_test.xml
+++ b/app/src/main/res/layout/fragment_mock_test.xml
@@ -69,6 +69,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTestConductedHeading"
-        tools:listitem="@layout/quiz_card_layout" />
+        tools:listitem="@layout/mock_test_card_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
