--- a/app/src/main/res/layout/activity_mock_question.xml
+++ b/app/src/main/res/layout/activity_mock_question.xml
@@ -7,84 +7,17 @@
     android:background="@color/background_color"
     tools:context=".home.activity.MockQuestionActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/mockHeader"
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/mockTestHostContainer"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/ivPopOut"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/medium_margin"
-            android:contentDescription="@null"
-            android:paddingVertical="@dimen/small_padding"
-            android:src="@drawable/ic_arrow_left"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/icon_tint" />
-
-        <TextView
-            android:id="@+id/tvTimer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/large_margin"
-            android:fontFamily="@font/dm_sans_bold"
-            android:text="@string/field_duration_start"
-            android:textColor="@color/text_color"
-            android:textSize="26sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/question_count_tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/background_color"
-        android:contentDescription="@null"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mockHeader"
-        app:tabGravity="start"
-        app:tabIndicatorHeight="0dp"
-        app:tabMode="scrollable"
-        app:tabRippleColor="@null" />
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/questionPager"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/question_count_tab_layout" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnSubmitQuiz"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/medium_margin"
-        android:layout_marginVertical="@dimen/medium_margin"
-        android:backgroundTint="@color/button_color"
-        android:fontFamily="@font/dm_sans_medium"
-        android:padding="@dimen/button_padding"
-        android:text="@string/button_submit_text"
-        android:textColor="@color/button_text_color"
-        android:textSize="16sp"
-        android:visibility="gone"
-        app:cornerRadius="6dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/mock_test_nav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
