--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -38,4 +38,6 @@
 
     <color name="chip_text_color">@color/off_white</color>
     <color name="chip_background_color">@color/blue</color>
+
+    <color name="correct_ans_border">@color/off_white</color>
 </resources>
