--- a/app/src/main/res/layout/activity_job_view.xml
+++ b/app/src/main/res/layout/activity_job_view.xml
@@ -38,13 +38,16 @@
             android:id="@+id/tvRole"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
             android:fontFamily="@font/dm_sans_bold"
+            android:maxLines="2"
+            android:paddingHorizontal="@dimen/small_padding"
             android:paddingVertical="@dimen/small_padding"
             android:textAlignment="center"
             android:textColor="@color/text_color"
             android:textSize="26sp"
-            app:layout_constraintLeft_toLeftOf="@+id/ivCompanyLogo"
-            app:layout_constraintRight_toRightOf="@id/ivCompanyLogo"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivCompanyLogo"
             tools:text="Product Manager" />
 
@@ -52,13 +55,16 @@
             android:id="@+id/tvCompanyLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
             android:fontFamily="@font/dm_sans_regular"
+            android:maxLines="2"
+            android:paddingHorizontal="@dimen/small_padding"
             android:paddingVertical="@dimen/small_padding"
             android:textAlignment="center"
             android:textColor="@color/text_color"
             android:textSize="18sp"
-            app:layout_constraintLeft_toLeftOf="@+id/tvRole"
-            app:layout_constraintRight_toRightOf="@id/tvRole"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvRole"
             tools:text="\u2022 Google \u2022 California \u2022" />
 
