--- a/app/src/main/res/layout/fragment_mock_test.xml
+++ b/app/src/main/res/layout/fragment_mock_test.xml
@@ -35,7 +35,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvMockTestHeading"
-        app:placeholderText="eg. Product Designer"
+        app:placeholderText="Mock name"
         app:startIconDrawable="@drawable/ic_search">
 
         <com.google.android.material.textfield.TextInputEditText
