--- a/app/src/main/res/layout/fragment_user_resume_edit.xml
+++ b/app/src/main/res/layout/fragment_user_resume_edit.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="@dimen/medium_margin"
         android:fontFamily="@font/dm_sans_bold"
         android:paddingVertical="@dimen/small_padding"
-        android:text="Update Resume"
+        android:text="Show Resume"
         android:textColor="@color/text_color"
         android:textSize="26sp"
         app:layout_constraintLeft_toLeftOf="@id/ivPopOut"
@@ -55,32 +55,5 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/medium_margin"
-        android:paddingVertical="@dimen/small_padding"
-        android:text="@string/resume_guideline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fileContainer" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnSubmit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/medium_margin"
-        android:layout_marginVertical="@dimen/medium_margin"
-        android:backgroundTint="@color/button_color"
-        android:fontFamily="@font/dm_sans_medium"
-        android:padding="@dimen/button_padding"
-        android:text="@string/button_submit_text"
-        android:textColor="@color/button_text_color"
-        android:textSize="16sp"
-        app:cornerRadius="6dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
