--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -173,7 +173,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/medium_margin"
                     android:fontFamily="@font/dm_sans_bold"
-                    android:text="Update Resume"
+                    android:text="Uploaded Resume"
                     android:textColor="@color/text_color"
                     android:textSize="18sp"
                     app:layout_constraintLeft_toRightOf="@+id/ivUpdateResumeLogo"
@@ -185,7 +185,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/small_margin"
                     android:fontFamily="@font/dm_sans_regular"
-                    android:text="Update your Resume here"
+                    android:text="View your uploaded resume here"
                     android:textColor="@color/text_color"
                     android:textSize="14sp"
                     app:layout_constraintLeft_toLeftOf="@+id/tvUpdateResumeHeading"
