JobSpot - Implemented Logout functionality

--- a/app/src/main/res/layout/bottom_sheet_logout.xml
+++ b/app/src/main/res/layout/bottom_sheet_logout.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="@dimen/large_padding"
-    tools:background="@color/bottom_sheet_background_color">
+    android:background="@color/bottom_sheet_background_color">
 
     <View
         android:layout_width="30dp"
